# dlang_plasmoid_example

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/ui/: main.qml
plugin/: CMakeLists.txt  dub.sdl  plugin_library_install.cmake  qmldir
plugin/source/: backend.d  plugin.d
